<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_Input" Id="{1f12566c-d440-48ed-a061-e899d9fe1061}">
    <Declaration><![CDATA[TYPE ST_Input :
STRUCT
bStart:BOOL;//启动 IN00
bStop:bool;//停止 IN01
bResetAlarm:bool;//报警复位 IN02
bEStop:bool;//急停 IN03
bDoor:bool;//安全门开关 IN04
bNone1:bool;//预留 IN05
bNone2:bool;//预留 IN06
bLine0Part_Cyl_H:bool;//主流线分料气缸原位 IN07
bLine0Part_Cyl_W:bool;//主流线分料气缸工作位 IN08
bLine0Prevent_Cyl_H:bool;//主流线阻挡气缸原位 IN09
bLine0Prevent_Cyl_W:bool;//主流线阻挡气缸工作位 IN0A
bLine1Elevator_Cyl_H:bool;//流水线1提升气缸原位 IN0B
bLine1Elevator_Cyl_W:bool;//流水线1提升气缸工作位 IN0C
bLine1Lift_Cyl_H:bool;//流水线1顶升气缸原位 IN0D
bLine1Lift_Cyl_W:bool;//流水线1顶升气缸工作位 IN0E
bLine1Prevent_Cyl_H:bool;//流水线1阻挡气缸原位 IN0F
bLine1Prevent_Cyl_W:bool;//流水线1阻挡气缸工作位 IN10
bLine1Rotate_Cyl_H:bool;//流水线1旋转气缸原位 IN11
bLine1Rotate_Cyl_W:bool;//流水线1旋转气缸工作位 IN12
bLine1Adjust1_Cyl_H:bool;//流水线1调宽气缸原位1 IN13
bLine1Adjust1_Cyl_W:bool;//流水线1调宽气缸工作位1 IN14
bLine1Adjust2_Cyl_H:bool;//流水线1调宽气缸原位2 IN15
bLine1Adjust2_Cyl_W:bool;//流水线1调宽气缸工作位2 IN16
bLine2Lift_Cyl_H:bool;//流水线2顶升气缸原位 IN17
bLine2Lift_Cyl_W:bool;//流水线2顶升气缸工作位 IN18
bLine2Prevent_Cyl_H:bool;//流水线2阻挡气缸原位 IN19
bLine2Prevent_Cyl_W:bool;//流水线2阻挡气缸工作位 IN1A
bLine2Standard1_Cyl_H:bool;//流水线2校平气缸1原位 IN1B
bLine2Standard1_Cyl_W:bool;//流水线2校平气缸1工作位 IN1C
bLine2Standard2_Cyl_H:bool;//流水线2校平气缸2原位 IN1D
bLine2Standard2_Cyl_W:bool;//流水线2校平气缸2工作位 IN1E
bLine2OpenLateral1_Cyl_H:bool;//流水线2解锁侧推气缸1原位 IN1F
bLine2OpenLateral1_Cyl_W:bool;//流水线2解锁侧推气缸1工作位 IN20
bLine2OpenRotate_Cyl_H:bool;//流水线2解锁旋转气缸原位 IN21
bLine2OpenRotate_Cyl_W:bool;//流水线2解锁旋转气缸工作位 IN22
bLine2OpenLateral2_Cyl_H:bool;//流水线2解锁侧推气缸2原位 IN23
bLine2OpenLateral2_Cyl_W:bool;//流水线2解锁侧推气缸2工作位 IN24
None:bool;//空 IN25
None1:bool;//空 IN26
bLine3LoadLift_Cyl_H:bool;//流水线3上料位顶升原位 IN27
bLine3LoadLift_Cyl_W:bool;//流水线3上料位顶升工作位 IN28
bLine3LoadPrevent_Cyl_H:bool;//流水线3上料位阻挡原位 IN29
bLine3LoadPrevent_Cyl_W:bool;//流水线3上料位阻挡工作位 IN2A
bLine3LoadRotate_Cyl_H:bool;//流水线3上料位旋转原位 IN2B
bLine3LoadRotate_Cyl_W:bool;//流水线3上料位旋转工作位 IN2C
bLine3OpenLift_Cyl_H:bool;//流水线3解锁位顶升原位 IN2D
bLine3OpenLift_Cyl_W:bool;//流水线3解锁位顶升工作位 IN2E
bLine3OpenPrevent_Cyl_H:bool;//流水线3解锁位阻挡原位 IN2F
bLine3OpenPrevent_Cyl_W:bool;//流水线3解锁位阻挡工作位 IN30
bLine3Standard1_Cyl_H:bool;//流水线3校平气缸1原位 IN31
bLine3Standard1_Cyl_W:bool;//流水线3校平气缸1工作位 IN32
bLine3Standard2_Cyl_H:bool;//流水线3校平气缸2原位 IN33
bLine3Standard2_Cyl_W:bool;//流水线3校平气缸2工作位 IN34
bLine3OpenLateral1_Cyl_H:bool;//流水线3解锁侧推气缸1原位 IN35
bLine3OpenLateral1_Cyl_W:bool;//流水线3解锁侧推气缸1工作位 IN36
bLine3OpenRotate_Cyl_H:bool;//流水线3解锁旋转气缸原位 IN37
bLine3OpenRotate_Cyl_W:bool;//流水线3解锁旋转气缸工作位 IN38
bLine3OpenLateral2_Cyl_H:bool;//流水线3解锁侧推气缸2原位 IN39
bLine3OpenLateral2_Cyl_W:bool;//流水线3解锁侧推气缸2工作位 IN3A
None3:bool;//空 IN3B
None4:bool;//空 IN3C
bTakeLift1_Cyl_H:bool;//取料模组升降气缸1原位 IN3D
bTakeLift1_Cyl_W:bool;//取料模组升降气缸1工作位 IN3E
bTakeLift2_Cyl_H:bool;//取料模组升降气缸2原位 IN3F
bTakeLift2_Cyl_W:bool;//取料模组升降气缸2工作位 IN40
bTakeClamp_Cyl_H:bool;//取料模组夹紧气缸原位 IN41
bTakeClamp_Cyl_W:bool;//取料模组夹紧气缸工作位 IN42
bUcLift_Cyl_H:bool;//下UC模组升降气缸原位 IN43
bUcLift_Cyl_W:bool;//下UC模组升降气缸工作位 IN44
bUcClamp_Cyl_H:bool;//下UC模组夹紧气缸原位 IN45
bUcClamp_Cyl_W:bool;//下UC模组夹紧气缸工作位 IN46
bUcSwing_Cyl_H:bool;//下UC模组摆动气缸原位 IN47
bUcSwing_Cyl_W:bool;//下UC模组摆动气缸工作位 IN48
bUcLift1_Cyl_H:bool;//下UC升降气缸1原位 IN49
bUcLift1_Cyl_W:bool;//下UC升降气缸1工作位 IN4A
bUcClamp1_Cyl_H:bool;//下UC夹紧气缸1原位 IN4B
bUcClamp1_Cyl_W:bool;//下UC夹紧气缸1工作位 IN4C
bUcRotate1_Cyl_H:bool;//下UC旋转气缸1原位 IN4D
bUcRotate1_Cyl_W:bool;//下UC旋转气缸1工作位 IN4E
bUcLift2_Cyl_H:bool;//下UC升降气缸2原位 IN4F
bUcLift2_Cyl_W:bool;//下UC升降气缸2工作位 IN50
bUcClamp2_Cyl_H:bool;//下UC夹紧气缸2原位 IN51
bUcClamp2_Cyl_W:bool;//下UC夹紧气缸2工作位 IN52
bUcRotate2_Cyl_H:bool;//下UC旋转气缸2原位 IN53
bUcRotate2_Cyl_W:bool;//下UC旋转气缸2工作位 IN54
bUcDrive_Cyl_H:bool;//下UC皮带推料气缸原位 IN55
bUcDrive_Cyl_W:bool;//下UC皮带推料气缸工作位 IN56
bFrockElevator1_Cyl_H:bool;//下工装提升气缸1原位 IN57
bFrockElevator1_Cyl_W:bool;//下工装提升气缸1工作位 IN58
bFrockRotateDown1_Cyl_H:bool;//下工装旋转压紧气缸1原位 IN59
bFrockRotateDown1_Cyl_W:bool;//下工装旋转压紧气缸1工作位 IN5A
bFrockPush1_Cyl_H:bool;//下工装拨料气缸1原位 IN5B
bFrockPush1_Cyl_W:bool;//下工装拨料气缸1工作位 IN5C
bFrockElevator2_Cyl_H:bool;//下工装提升气缸2原位 IN5D
bFrockElevator2_Cyl_W:bool;//下工装提升气缸2工作位 IN5E
bFrockRotateDown2_Cyl_H:bool;//下工装旋转压紧气缸2原位 IN5F
bFrockRotateDown2_Cyl_W:bool;//下工装旋转压紧气缸2工作位 IN60
bFrockPush2_Cyl_H:bool;//下工装拨料气缸2原位 IN61
bFrockPush2_Cyl_W:bool;//下工装拨料气缸2工作位 IN62
bFrockBelt_Cyl_H:bool;//下工装皮带推料气缸原位 IN63
bFrockBelt_Cyl_W:bool;//下工装皮带推料气缸工作位 IN64
bNone3:bool;//预留 IN65
bLine0Part:bool;//主流线分料光电 IN66
bLine0Prevent:bool;//主流线阻挡光电 IN67
bLine0Place:bool;//主流线到位光电 IN68
bLine1PalletCheck1:bool;//流水线1流入光电 IN69
bLine1PalletCheck2:bool;//流水线1到位光电 IN6A
bLine1PalletCheck3:bool;//流水线1流出光电 IN6B
bLine2PalletCheck1:bool;//流水线2流入光电 IN6C
bLine2PalletCheck2:bool;//流水线2到位光电 IN6D
bLine2PalletCheck3:bool;//流水线2流出光电 IN6E
bLine3PalletCheck1:bool;//流水线3上料位流入光电 IN6F
bLine3PalletCheck2:bool;//流水线3上料位到位光电 IN70
bLine3PalletCheck3:bool;//流水线3上料位流出光电 IN71
bLine3OpenCheck1:bool;//流水线3解锁位流入光电 IN72
bLine3OpenCheck2:bool;//流水线3解锁位到位光电 IN73
bLine3OpenCheck3:bool;//流水线3解锁位流出光电 IN74
bUcCheck1:bool;//下UC模组UC有无检测1 IN75
bUcCheck2:bool;//下UC皮带UC有无检测2 IN76
bUcCheck3:bool;//下UC皮带UC有无检测3 IN77
bUcBeltDone:bool;//下UC皮带到位检测 IN78
bUcBeltNoneCheck:bool;//下UC皮带斜坡有无检测 IN79
bFrockElevator1NoneCheck:bool;//下工装提升1工装有无检测 IN7A
bFrockElevator2NoneCheck:bool;//下工装提升2工装有无检测 IN7B
bFrockBeltNoneCheck1:bool;//下工装皮带工装有无检测1 IN7C
bFrockBeltNoneCheck2:bool;//下工装皮带工装有无检测2 IN7D
bFrockBeltDone:bool;//下工装皮带到位检测 IN7E
bFrockBeltNoneCheck3:bool;//下工装皮带斜坡有无检测 IN7F
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>