<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="ST_Output" Id="{90ed4872-17e9-42f5-8e1a-02c49fe5e3ea}">
    <Declaration><![CDATA[TYPE ST_Output :
STRUCT
bBeacon_Red:BOOL;//三色灯红 OUT00
bBeacon_Yellow:bool;//三色灯黄 OUT01
bBeacon_Green:bool;//三色灯绿 OUT02
bBeacon_Buzzer:bool;//蜂鸣器 OUT03
bRuning:bool;//运行指示灯 OUT04
bStop:bool;//停止指示灯 OUT05
bLED:bool;//照明灯 OUT06
bLine0Part_Cyl_H:bool;//主流线分料气缸缩回 OUT07
bLine0Part_Cyl_W:bool;//主流线分料气缸伸出 OUT08
bLine0Prevent_Cyl_H:bool;//主流线阻挡气缸缩回 OUT09
bLine0Prevent_Cyl_W:bool;//主流线阻挡气缸伸出 OUT0A
bLine1Elevator_Cyl_H:bool;//流水线1提升气缸缩回 OUT0B
bLine1Elevator_Cyl_W:bool;//流水线1提升气缸伸出 OUT0C
bLine1Lift_Cyl_H:bool;//流水线1顶升气缸缩回 OUT0D
bLine1Lift_Cyl_W:bool;//流水线1顶升气缸伸出 OUT0E
bLine1Prevent_Cyl_H:bool;//流水线1阻挡气缸缩回 OUT0F
bLine1Prevent_Cyl_W:bool;//流水线1阻挡气缸伸出 OUT10
bLine1Rotate_Cyl_H:bool;//流水线1旋转气缸缩回 OUT11
bLine1Rotate_Cyl_W:bool;//流水线1旋转气缸伸出 OUT12
bLine1Adjust1_Cyl_H:bool;//流水线1调宽气缸缩回 OUT13
bLine1Adjust1_Cyl_W:bool;//流水线1调宽气缸伸出 OUT14
None1:bool;//预留 OUT15
None2:bool;//预留 OUT16
bLine2Lift_Cyl_H:bool;//流水线2顶升气缸缩回 OUT17
bLine2Lift_Cyl_W:bool;//流水线2顶升气缸伸出 OUT18
bLine2Prevent_Cyl_H:bool;//流水线2阻挡气缸缩回 OUT19
bLine2Prevent_Cyl_W:bool;//流水线2阻挡气缸伸出 OUT1A
bLine2Standard1_Cyl_H:bool;//流水线2校平气缸1缩回 OUT1B
bLine2Standard1_Cyl_W:bool;//流水线2校平气缸1伸出 OUT1C
bLine2Standard2_Cyl_H:bool;//流水线2校平气缸2缩回 OUT1D
bLine2Standard2_Cyl_W:bool;//流水线2校平气缸2伸出 OUT1E
bLine2OpenLateral1_Cyl_H:bool;//流水线2解锁侧推气缸1缩回 OUT1F
bLine2OpenLateral1_Cyl_W:bool;//流水线2解锁侧推气缸1伸出 OUT20
bLine2OpenRotate_Cyl_H:bool;//流水线2解锁旋转气缸缩回 OUT21
bLine2OpenRotate_Cyl_W:bool;//流水线2解锁旋转气缸伸出 OUT22
bLine2OpenLateral2_Cyl_H:bool;//流水线2解锁侧推气缸2缩回 OUT23
bLine2OpenLateral2_Cyl_W:bool;//流水线2解锁侧推气缸2伸出 OUT24
None202:bool;//预留 OUT25
None203:bool;//预留 OUT26
bLine3LoadLift_Cyl_H:bool;//流水线3上料位顶升缩回 OUT27
bLine3LoadLift_Cyl_W:bool;//流水线3上料位顶升伸出 OUT28
bLine3LoadPrevent_Cyl_H:bool;//流水线3上料位阻挡缩回 OUT29
bLine3LoadPrevent_Cyl_W:bool;//流水线3上料位阻挡伸出 OUT2A
bLine3LoadRotate_Cyl_H:bool;//流水线3上料位旋转缩回 OUT2B
bLine3LoadRotate_Cyl_W:bool;//流水线3上料位旋转伸出 OUT2C
bLine3OpenLift_Cyl_H:bool;//流水线3解锁位顶升缩回 OUT2D
bLine3OpenLift_Cyl_W:bool;//流水线3解锁位顶升伸出 OUT2E
bLine3OpenPrevent_Cyl_H:bool;//流水线3解锁位阻挡缩回 OUT2F
bLine3OpenPrevent_Cyl_W:bool;//流水线3解锁位阻挡伸出 OUT30
bLine3Standard1_Cyl_H:bool;//流水线3校平气缸1缩回 OUT31
bLine3Standard1_Cyl_W:bool;//流水线3校平气缸1伸出 OUT32
bLine3Standard2_Cyl_H:bool;//流水线3校平气缸2缩回 OUT33
bLine3Standard2_Cyl_W:bool;//流水线3校平气缸2伸出 OUT34
bLine3OpenLateral1_Cyl_H:bool;//流水线3解锁侧推气缸1缩回 OUT35
bLine3OpenLateral1_Cyl_W:bool;//流水线3解锁侧推气缸1伸出 OUT36
bLine3OpenRotate_Cyl_H:bool;//流水线3解锁旋转气缸缩回 OUT37
bLine3OpenRotate_Cyl_W:bool;//流水线3解锁旋转气缸伸出 OUT38
bLine3OpenLateral2_Cyl_H:bool;//流水线3解锁侧推气缸2缩回 OUT39
bLine3OpenLateral2_Cyl_W:bool;//流水线3解锁侧推气缸2伸出 OUT3A
None200:bool;//预留 OUT3B
None201:bool;//预留 OUT3C
bTakeLift1_Cyl_H:bool;//取料模组升降气缸1缩回 OUT3D
bTakeLift1_Cyl_W:bool;//取料模组升降气缸1伸出 OUT3E
bTakeLift2_Cyl_H:bool;//取料模组升降气缸2缩回 OUT3F
bTakeLift2_Cyl_W:bool;//取料模组升降气缸2伸出 OUT40
bTakeClamp_Cyl_H:bool;//取料模组夹紧气缸缩回 OUT41
bTakeClamp_Cyl_W:bool;//取料模组夹紧气缸伸出 OUT42
bUcLift_Cyl_H:bool;//下UC模组升降气缸缩回 OUT43
bUcLift_Cyl_W:bool;//下UC模组升降气缸伸出 OUT44
bUcClamp_Cyl_H:bool;//下UC模组夹紧气缸缩回 OUT45
bUcClamp_Cyl_W:bool;//下UC模组夹紧气缸伸出 OUT46
bUcSwing_Cyl_H:bool;//下UC模组摆动气缸缩回 OUT47
bUcSwing_Cyl_W:bool;//下UC模组摆动气缸伸出 OUT48
bUcLift1_Cyl_H:bool;//下UC升降气缸1缩回 OUT49
bUcLift1_Cyl_W:bool;//下UC升降气缸1伸出 OUT4A
bUcClamp1_Cyl_H:bool;//下UC夹紧气缸1缩回 OUT4B
bUcClamp1_Cyl_W:bool;//下UC夹紧气缸1伸出 OUT4C
bUcRotate1_Cyl_H:bool;//下UC旋转气缸1缩回 OUT4D
bUcRotate1_Cyl_W:bool;//下UC旋转气缸1伸出 OUT4E
bUcLift2_Cyl_H:bool;//下UC升降气缸2缩回 OUT4F
bUcLift2_Cyl_W:bool;//下UC升降气缸2伸出 OUT50
bUcClamp2_Cyl_H:bool;//下UC夹紧气缸2缩回 OUT51
bUcClamp2_Cyl_W:bool;//下UC夹紧气缸2伸出 OUT52
bUcRotate2_Cyl_H:bool;//下UC旋转气缸2缩回 OUT53
bUcRotate2_Cyl_W:bool;//下UC旋转气缸2伸出 OUT54
bUcDrive_Cyl_H:bool;//下UC皮带推料气缸缩回 OUT55
bUcDrive_Cyl_W:bool;//下UC皮带推料气缸伸出 OUT56
bFrockElevator1_Cyl_H:bool;//下工装提升气缸1缩回 OUT57
bFrockElevator1_Cyl_W:bool;//下工装提升气缸1伸出 OUT58
bFrockRotateDown1_Cyl_H:bool;//下工装旋转压紧气缸1缩回 OUT59
bFrockRotateDown1_Cyl_W:bool;//下工装旋转压紧气缸1伸出 OUT5A
bFrockPush1_Cyl_H:bool;//下工装拨料气缸1缩回 OUT5B
bFrockPush1_Cyl_W:bool;//下工装拨料气缸1伸出 OUT5C
bFrockElevator2_Cyl_H:bool;//下工装提升气缸2缩回 OUT5D
bFrockElevator2_Cyl_W:bool;//下工装提升气缸2伸出 OUT5E
bFrockRotateDown2_Cyl_H:bool;//下工装旋转压紧气缸2缩回 OUT5F
bFrockRotateDown2_Cyl_W:bool;//下工装旋转压紧气缸2伸出 OUT60
bFrockPush2_Cyl_H:bool;//下工装拨料气缸2缩回 OUT61
bFrockPush2_Cyl_W:bool;//下工装拨料气缸2伸出 OUT62
bFrockBelt_Cyl_H:bool;//下工装皮带推料气缸缩回 OUT63
bFrockBelt_Cyl_W:bool;//下工装皮带推料气缸伸出 OUT64
None3:bool;//预留 OUT65
bLine1Axis:bool;//流水线1皮带运行 OUT66
bLine2Axis:bool;//流水线2皮带运行 OUT67
bLine3Axis:bool;//流水线3皮带运行 OUT68
bUnloadUCLine:bool;//下UC皮带运行 OUT69
bUnloadElevatorLine:bool;//下工装皮带运行 OUT6A
None9:bool;//预留 OUT6B
None10:bool;//预留 OUT6C
None11:bool;//预留 OUT6D
None12:bool;//预留 OUT6E
None13:BOOL;//预留 OUT6F
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>